--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
+    - uses: actions/checkout@v3
     - uses: coursier/cache-action@v6
     - uses: VirtusLab/scala-cli-setup@main
-
-    - name: Checkout repo
-      uses: actions/checkout@v3
 
     - name: Build
       run: |
